hls_component/hls_component/logs/hls_run_csim_19804.backup.log
  **** HLS Build v2025.2 6295257
INFO: [HLS 200-2005] Using work_dir C:/Users/Brandon/Desktop/codes/hls_bruh/hls_component/hls_component 
INFO: [HLS 200-2176] Writing Vitis IDE component file C:/Users/Brandon/Desktop/codes/hls_bruh/hls_component/hls_component/vitis-comp.json
INFO: [HLS 200-10] Creating and opening component 'C:/Users/Brandon/Desktop/codes/hls_bruh/hls_component/hls_component'.
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.amd.com/access/sources/dita/topic?Doc_Version=2025.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-2174] Applying component config ini file hls_config.cfg
WARNING: [HLS 200-2001] file not found './superblock_tb - Copy.cpp' see [hls] from hls_config.cfg(9)
INFO: [HLS 200-1465] Applying config ini 'syn.file=./hello.cpp' from hls_config.cfg(7)
INFO: [HLS 200-10] Adding design file 'C:/Users/Brandon/Desktop/codes/hls_bruh/hls_component/hello.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'tb.file=./superblock_tb - Copy.cpp' from hls_config.cfg(9)
WARNING: [HLS 200-40] Cannot find test bench file './superblock_tb'
WARNING: [HLS 200-40] Cannot find test bench file '-'
WARNING: [HLS 200-40] Cannot find test bench file 'Copy.cpp'
INFO: [HLS 200-1465] Applying config ini 'tb.file=./superblock_tb_lmul.cpp' from hls_config.cfg(10)
INFO: [HLS 200-10] Adding test bench file 'C:/Users/Brandon/Desktop/codes/hls_bruh/hls_component/superblock_tb_lmul.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.top=qwen_superblock' from hls_config.cfg(8)
INFO: [HLS 200-1465] Applying config ini 'flow_target=vivado' from hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.amd.com/access/sources/dita/topic?Doc_Version=2025.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying config ini 'part=xczu9eg-ffvb1156-2-e' from hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xczu9eg-ffvb1156-2-e'
INFO: [HLS 200-1465] Applying config ini 'package.output.format=ip_catalog' from hls_config.cfg(5)
INFO: [HLS 200-2176] Writing Vitis IDE component file C:/Users/Brandon/Desktop/codes/hls_bruh/hls_component/hls_component/vitis-comp.json
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [HLS 200-2191] C-Simulation will use clang-16 as the compiler
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../superblock_tb_lmul.cpp in debug mode
   Compiling ../../../../hello.cpp in debug mode
In file included from ../../../../superblock_tb_lmul.cpp:5:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\hls_half.h:26:
In file included from C:/AMDDesignTools/2025.2/Vitis/include/etc/hls_half_fpo.h:19:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\hls_fpo.h:140:
In file included from C:/AMDDesignTools/2025.2/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/AMDDesignTools/2025.2/Vitis/include\gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/AMDDesignTools/2025.2/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
1 warning generated.
In file included from ../../../../hello.cpp:84:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\hls_half.h:26:
In file included from C:/AMDDesignTools/2025.2/Vitis/include/etc/hls_half_fpo.h:19:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\hls_fpo.h:140:
In file included from C:/AMDDesignTools/2025.2/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/AMDDesignTools/2025.2/Vitis/include\gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/AMDDesignTools/2025.2/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../hello.cpp:98:31: error: no member named 'to_bits' in 'half'
    unsigned short a_bits = a.to_bits();
                            ~ ^
../../../../hello.cpp:99:31: error: no member named 'to_bits' in 'half'
    unsigned short b_bits = b.to_bits();
                            ~ ^
1 warning and 2 errors generated.
mingw32-make: *** [csim.mk:97: obj/hello.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: CSIM Failed
INFO: [HLS 200-112] Total CPU user time: 3 seconds. Total CPU system time: 3 seconds. Total elapsed time: 10.459 seconds; peak allocated memory: 371.375 MB.
